--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,6 +1,6 @@
 /* Preload images */
 body:after {
-  content: url(../img/close.png) url(../img/loading.gif) url(../img/prev.png) url(../img/next.png);
+  content: url(../img/close.png) url(../img/GF-Loading.gif) url(../img/prev.png) url(../img/next.png);
   display: none;
 }
 
@@ -67,12 +67,14 @@ body:after {
 
 .lb-loader {
   position: absolute;
-  top: 43%;
-  left: 0;
-  height: 25%;
-  width: 100%;
+  top: 10%;
+  left: 10%;
+  height: 150%;
+  width: 150%;
   text-align: center;
   line-height: 0;
+  background: url(../img/GF-Loading.gif) no-repeat;
+
 }
 
 .lb-cancel {
@@ -80,7 +82,7 @@ body:after {
   width: 32px;
   height: 32px;
   margin: 0 auto;
-  background: url(../img/loading.gif) no-repeat;
+  
 }
 
 .lb-nav {
