--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@
   box-sizing: border-box;
 }
 body {
-  color: #333333;   
+  color: #00ff96;   
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: #c4dce1;                      /*change your Bkg color*/
+  background-color: #1088c0;                      /*change your Bkg color*/
 }
 
 a, a:active, a:visited {
@@ -33,8 +33,8 @@ footer p {
 header {
   background: #C8C1B7;
   border-bottom: 1px solid #999999;
-  background-image: url("../img/gallerybanner.jpg"); /*change your banner image*/
-  height: 60px;
+  background-image: url("../img/GF-Banner.jpg"); /*change your banner image*/
+  height: 90px;
   position: relative;
   width: 100%;
 }
@@ -62,24 +62,24 @@ header nav > ul li {
   font-weight: 600;
   list-style-type: none;
   margin-right: 2rem;
-  transition: border-color 200ms ease-in-out;
+  transition: border-color 1500ms ease-in-out;
   /* See: https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Using_CSS_transitions */
 }
 
 header nav > ul li:hover, header nav > ul li.active {
-  border-bottom-color: #0066CC;
+  border-bottom-color: #00ff18;
 }
 
 header nav > ul li:hover a, header nav > ul li.active a {
-  color: #0066CC;
+  color: #FFFFFF;
 }
 
 header nav a, header nav a:visited {
   display: block;
   line-height: 60px;
   text-decoration: none;
-  color: #000000;                         /*changes banner text color*/
-  transition: color 200ms ease-in-out;
+  color: #00ff18;                         /*changes banner text color*/
+  transition: color 1500ms ease-in-out;
 }
 
 .gallery {
