--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,8 +1,8 @@
 
 body {
-  background-color: #c4dce1; /* change background color */
+  background-color: #b87b3d; /* change background color */
   text-align: center;
-  color: #000;  /* change font color */
+  color: #1bd1d8;  /* change font color */
   line-height: 36px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -14,7 +14,7 @@ body,html {
 
 }
 a, a:active, a:visited {
-  color: #0066CC;
+  color: #84d2cd
 }
 
 h1, h2, h3, h4 {
@@ -23,13 +23,13 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 36px; /* change */
+  font-size: 40px; /* change */
   line-height: 36px;
   margin: 1.6875rem 0;
 }
 
 #container {
-  background-image: url("../img/cement.jpg"); /* change */
+  background-image: url("../img/GF-background.jpg"); /* change */
   min-height: 100%;
   max-width: 960px;
   margin: 0 auto;
